--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,11 @@
 /* media.scss */
 .footer { position: fixed; bottom: 0; left: 0; right: 0; background-color: #f5f5f5; }
 
-.footer-copyright { font-size: 1.15em; text-align: left; color: #ffffff; }
+.footer-copyright { font-size: 1.15em; text-align: left; color: #000000; }
 
-.footer-copyright a { color: #f2f2f2; text-decoration: none; }
+.footer-copyright a { color: #6f6f6f; text-decoration: none; }
 
-.footer-copyright a:hover { color: white; text-decoration: none; }
+.footer-copyright a:hover { color: #959595; text-decoration: none; }
 
 .footer-social { text-align: right; font-size: 1.5em; }
 
