--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* _mixins.scss */
-/* _typography.scss */
+/* typography.scss */
 /* variables.scss */
-/* media.scss */
-.footer { position: fixed; bottom: 0; left: 0; right: 0; background-color: #f5f5f5; }
+/* footer.scss */
+.footer { position: fixed; bottom: 0; left: 0; right: 0; }
 
 .footer-copyright { font-size: 1.15em; text-align: left; color: #000000; }
 
@@ -10,7 +10,17 @@
 
 .footer-copyright a:hover { color: #959595; text-decoration: none; }
 
-.footer-social { text-align: right; font-size: 1.5em; }
-
-@media all and (max-width: 991px) { .footer-copyright, .footer-social { text-align: center; }
+@media all and (max-width: 991px) { .footer-copyright { text-align: center; }
   .footer-copyright span { display: none; } }
+
+body { padding-top: 20px; }
+
+.jumbotron { font-size: 21px; font-weight: 200; line-height: 2.1428571435; color: inherit; padding: 10px 0px; }
+
+.masthead, .body-content { padding-left: 15px; padding-right: 15px; }
+
+.jumbotron { text-align: center; background-color: transparent; }
+
+.jumbotron .btn { font-size: 21px; padding: 14px 24px; }
+
+.red { color: #d9534f; }
